--- a/Prototype/Web.config
+++ b/Prototype/Web.config
@@ -8,9 +8,13 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
+
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Prototype-20160426115628.mdf;Initial Catalog=aspnet-Prototype-20160426115628;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="LoonetaContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=Prototype1;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -78,6 +82,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="Prototype.DAL.LoonetaContext, Prototype">
+        <databaseInitializer type="Prototype.DAL.LoonetaInitializer, Prototype" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
